Fixed issue where homepage image was cut off

--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -45,6 +45,7 @@
 	overflow: hidden;
 	border-radius: 10%;
 	transform: rotate(3deg);
+	height: 370px;
 }
 
 .homepage-image-wrapper img {
